// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`2799.scss - {"trailingComma":"es5"} format 1`] = `
====================================options=====================================
parsers: ["scss"]
trailingComma: "es5"
                                                      printWidth: 80 (default) |
=====================================input======================================
$default: #111111 !default;
$default: #111111   !default;
$default: #111111
!default;
$default: "very-long-long-long-long-long-long-long-long-long-long-long-value" !default;
$default: "very-long-long-long-long-long-long-long-long-long-long-long-value"   !default;
$default: "very-long-long-long-long-long-long-long-long-long-long-long-value"
!default;

$global: #111111 !global;
$global: #111111   !global;
$global: #111111
!global;
$global: "very-long-long-long-long-long-long-long-long-long-long-long-value" !global;
$global: "very-long-long-long-long-long-long-long-long-long-long-long-value"   !global;
$global: "very-long-long-long-long-long-long-long-long-long-long-long-value"
!global;

=====================================output=====================================
$default: #111111 !default;
$default: #111111 !default;
$default: #111111 !default;
$default: "very-long-long-long-long-long-long-long-long-long-long-long-value" !default;
$default: "very-long-long-long-long-long-long-long-long-long-long-long-value" !default;
$default: "very-long-long-long-long-long-long-long-long-long-long-long-value" !default;

$global: #111111 !global;
$global: #111111 !global;
$global: #111111 !global;
$global: "very-long-long-long-long-long-long-long-long-long-long-long-value" !global;
$global: "very-long-long-long-long-long-long-long-long-long-long-long-value" !global;
$global: "very-long-long-long-long-long-long-long-long-long-long-long-value" !global;

================================================================================
`;

exports[`2799.scss - {"trailingComma":"none"} format 1`] = `
====================================options=====================================
parsers: ["scss"]
trailingComma: "none"
                                                      printWidth: 80 (default) |
=====================================input======================================
$default: #111111 !default;
$default: #111111   !default;
$default: #111111
!default;
$default: "very-long-long-long-long-long-long-long-long-long-long-long-value" !default;
$default: "very-long-long-long-long-long-long-long-long-long-long-long-value"   !default;
$default: "very-long-long-long-long-long-long-long-long-long-long-long-value"
!default;

$global: #111111 !global;
$global: #111111   !global;
$global: #111111
!global;
$global: "very-long-long-long-long-long-long-long-long-long-long-long-value" !global;
$global: "very-long-long-long-long-long-long-long-long-long-long-long-value"   !global;
$global: "very-long-long-long-long-long-long-long-long-long-long-long-value"
!global;

=====================================output=====================================
$default: #111111 !default;
$default: #111111 !default;
$default: #111111 !default;
$default: "very-long-long-long-long-long-long-long-long-long-long-long-value" !default;
$default: "very-long-long-long-long-long-long-long-long-long-long-long-value" !default;
$default: "very-long-long-long-long-long-long-long-long-long-long-long-value" !default;

$global: #111111 !global;
$global: #111111 !global;
$global: #111111 !global;
$global: "very-long-long-long-long-long-long-long-long-long-long-long-value" !global;
$global: "very-long-long-long-long-long-long-long-long-long-long-long-value" !global;
$global: "very-long-long-long-long-long-long-long-long-long-long-long-value" !global;

================================================================================
`;

exports[`19203.scss - {"trailingComma":"es5"} format 1`] = `
====================================options=====================================
parsers: ["scss"]
trailingComma: "es5"
                                                      printWidth: 80 (default) |
=====================================input======================================
// \`!default\` / \`!global\` inside strings, urls and function arguments must not
// be treated as Sass declaration flags. (#19203)
$a: "!default";
$b: unquote("!default");
$c: url("x!global");
$d: "foo !default bar";
$e: "a" + "!global";

// Real trailing flags still apply, even alongside a string containing the flag.
$f: "!default" !default;
$g: "!global" !global;
$h: 1px !default;
$i: map(a: 1, b: 2) !default;

=====================================output=====================================
// \`!default\` / \`!global\` inside strings, urls and function arguments must not
// be treated as Sass declaration flags. (#19203)
$a: "!default";
$b: unquote("!default");
$c: url("x!global");
$d: "foo !default bar";
$e: "a" + "!global";

// Real trailing flags still apply, even alongside a string containing the flag.
$f: "!default" !default;
$g: "!global" !global;
$h: 1px !default;
$i: map(
  a: 1,
  b: 2,
) !default;

================================================================================
`;

exports[`19203.scss - {"trailingComma":"none"} format 1`] = `
====================================options=====================================
parsers: ["scss"]
trailingComma: "none"
                                                      printWidth: 80 (default) |
=====================================input======================================
// \`!default\` / \`!global\` inside strings, urls and function arguments must not
// be treated as Sass declaration flags. (#19203)
$a: "!default";
$b: unquote("!default");
$c: url("x!global");
$d: "foo !default bar";
$e: "a" + "!global";

// Real trailing flags still apply, even alongside a string containing the flag.
$f: "!default" !default;
$g: "!global" !global;
$h: 1px !default;
$i: map(a: 1, b: 2) !default;

=====================================output=====================================
// \`!default\` / \`!global\` inside strings, urls and function arguments must not
// be treated as Sass declaration flags. (#19203)
$a: "!default";
$b: unquote("!default");
$c: url("x!global");
$d: "foo !default bar";
$e: "a" + "!global";

// Real trailing flags still apply, even alongside a string containing the flag.
$f: "!default" !default;
$g: "!global" !global;
$h: 1px !default;
$i: map(
  a: 1,
  b: 2
) !default;

================================================================================
`;
